# soothing_duo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  railway.json  todo.txt
.github/workflows/: auto-comment.yml
accounts/: forms.py
blog/: admin.py  api_urls.py  api_views.py  context_processors.py  forms.py  middleware.py  moddleware.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_views_like.py  0003_post_tags.py  0004_alter_post_content_alter_post_status.py  0005_comment_email_comment_name_alter_comment_author.py
core/: settings.py  sitemaps.py  urls.py
django_project/: settings.py
pages/: urls.py  views.py
scheduling/: admin.py  availability.py  context_processors.py  forms.py  models.py  views.py
scheduling/migrations/: 0001_initial.py
scripts/: start.sh
services/: views.py
static/blog/: animations.css
static/css/: base.css  home.css
static/js/: base.js
templates/: 404.html  500.html  _base.html  robots.txt
templates/account/: login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html
templates/blog/: base.html  category_posts.html  post_detail.html  post_form.html  post_list.html
templates/includes/: footer.html  navbar.html  test.html  ticket_sidebar.html  ticket_topbar.html
templates/pages/: about.html  contacts.html  home.html  ticket.html
ticket/: views.py
vue-project/: package-lock.json  package.json  vite.config.ts
(+16 files in other folders)
