[project]
name = "soothing_duo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "django ~=5.1",
  "django-allauth[openid,socialaccount] ~=65.2",
  "django-debug-toolbar ~=4.4",
  "crispy-tailwind ~=1.0",
  "gunicorn~=23.0",
  "psycopg[binary] ~=3.2",
  "whitenoise ~=6.7",
  "python-decouple>=3.8",
  "psycopg2-binary>=2.9.11",
  "python-slugify>=8.0.4",
  "djangorestframework>=3.16.1",
  "django-cors-headers>=4.9.0",
  "django-htmx>=1.26.0",
  "django-taggit>=6.1.0",
  "django-tinymce>=5.0.0",
  "django-tailwind[reload] ~=3.8",
  "dj-database-url ~=2.3.0",
  "django-browser-reload ~=1.17",
]

[dependency-groups]
dev = [
  "typing_extensions ~=4.12",
]
